Fixed sass build issues due to deprecation of / character when diving. Zense DOM Object: Fixed and issue that caused duplication of parent selector specificity when re-rendering a module/component that has a parent. Zense Renderer Object: Changed name and logic of handleAPIUse to strap since we are no longer setting up zense to use API out of the box. Reason behind this change is because it is very limiting. Zense Storage Object: Fixed various issues with storage object. Refined logic and changed any 'settings' post fix to 'store. ex saveStore instead of saveSettings. Zense Composite Object: Added additonal logic to handle instances of strapees. This is so we don't end up overwriting base Strapee Objects when customizing them or even referencing them throught he parent. Zense Module & Component Object: Added logic to handle instancing of child components (for modules) & behaviors (for both) so that we are not overwriting base object. This also fixes various issues with running the same behaviors or components under the same parent from double binding or not binding at all event when 1 is customized. Zense Behavior Object: Fixed an issue where specificity starting from parent selector to find child selector in dom was not working.

--- a/src/app/scss/components/_carousel.scss
+++ b/src/app/scss/components/_carousel.scss
@@ -42,7 +42,7 @@
     padding: 1rem;
 
     @media screen and (min-width: 320px) {
-      padding: fluid-sizing(2rem, 3rem) fluid-sizing(4rem, 18rem);
+      padding: 2rem 3rem;
     }
   }
 
@@ -52,33 +52,33 @@
 
     h1 {
       font-size: 2rem;
-      @include fluid-prop(font-size, 2rem, 2.8rem, 320px, 1280px);
+      // @include fluid-prop(font-size, 2rem, 2.8rem, 320px, 1280px);
     }
 
     h2 {
       font-size: 1.7rem;
-      @include fluid-prop(font-size, 1.7rem, 2rem, 320px, 1280px);
+      // @include fluid-prop(font-size, 1.7rem, 2rem, 320px, 1280px);
     }
 
     h3 {
       font-size: 1.5rem;
-      @include fluid-prop(font-size, 1.5rem, 1.8rem, 320px, 1280px);
+      // @include fluid-prop(font-size, 1.5rem, 1.8rem, 320px, 1280px);
     }
 
     h4 {
       font-size: 1.2rem;
-      @include fluid-prop(font-size, 1.2rem, 1.5rem, 320px, 1280px);
+      // @include fluid-prop(font-size, 1.2rem, 1.5rem, 320px, 1280px);
     }
 
     h5 {
       font-size: 1rem;
-      @include fluid-prop(font-size, 1rem, 1.5rem, 320px, 1280px);
+      // @include fluid-prop(font-size, 1rem, 1.5rem, 320px, 1280px);
     }
 
     p {
       font-size: 1rem;
       line-height: 1.3rem;
-      @include fluid-prop(font-size, 1rem, 1.2rem, 320px, 1280px);
+      // @include fluid-prop(font-size, 1rem, 1.2rem, 320px, 1280px);
     }
   }
 }
