--- a/src/app/scss/components/_controls.scss
+++ b/src/app/scss/components/_controls.scss
@@ -19,8 +19,8 @@
     align-items: center;
 
     &.is--carousel {
-      width: fluid-sizing(3rem, 5rem);
-      height: fluid-sizing(3rem, 5rem);
+      // width: fluid-sizing(3rem, 5rem);
+      // height: fluid-sizing(3rem, 5rem);
       border-radius: 100%;
       border: 1px solid #ccc;
       background-color: #fff;
